# vinyana

./: .travis.yml  Cargo.toml  README.md  WORKLOG.md  xor.nn
src/: activation.rs  cost.rs  lib.rs  main.rs
src/matrix/: mod.rs
