[package]
name = "vinyana"
description = "A neural network library" 
version = "0.1.0"
edition = "2018"
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/alxolr/vinyana"
include = [
    "**/*.rs",
    "Cargo.toml",
]
keywords = ["neural-network", "perceptron"]

[dependencies]
bincode = "1.3"
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
