[package]
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
description = "A neural network library"
edition = "2018"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["neural-network", "perceptron"]
license = "MIT OR Apache-2.0"
name = "vinyana"
repository = "https://github.com/alxolr/vinyana"
version = "0.2.0"

[dependencies]
bincode = "1.3"
ndarray = {version = "0.15", features = ["serde"]}
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
