[package]
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
description = "A neural network library written in Rust"
edition = "2021"
include = [
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["neural-network", "perceptron"]
license = "MIT OR Apache-2.0"
name = "vinyana"
repository = "https://github.com/alxolr/vinyana"
version = "0.3.1"

[dependencies]
bincode = "1.3"
ndarray = {version = "0.15", features = ["serde", "matrixmultiply-threading"]}
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
